--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -28,7 +28,9 @@ jobs:
         with:
           tag_name: ${{ github.ref }}
           body: |-
-            ${{github.event.head_commit.message}}
+            ${{github.event.head_commit.message}} 
+            by committer.name [${{github.event.head_commit.committer.name}}](${{github.event.committer.url})
+            author.name ${{ github.event.head_commit.author.name}}
       - name: Publish to npm registry
         run: |
           npm publish --access public
