--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,7 +29,7 @@ jobs:
           tag_name: ${{ github.ref }}
           body: |-
             ${{github.event.head_commit.message}} 
-            by committer.name [${{github.event.head_commit.committer.name}}](github.event.head_commit.committer.url)
+            by committer.name [${{github.event.head_commit.committer.name}}](${{github.event.head_commit.committer.url)}}
             author.name ${{ github.event.head_commit.author.name}}
       - name: Publish to npm registry
         run: |
